--- a/src/scss/base/_bio.scss
+++ b/src/scss/base/_bio.scss
@@ -1,49 +1,23 @@
 .jb-bio{
-  // display: flex;
-  // justify-content: space-between;
   padding: 1em;
   max-width: $max-width;
   margin: auto;
-  // &__image{
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-around;
-  //   position: relative;
-  //   width: 50%;
-  //   @media screen and (min-width: $breakpoint-med){
-  //     width: 30%;
-  //   }
-  //   margin-top: 1em;
-  //   img{
-  //     width: 100%;
-  //     height: auto;
-  //     max-width: 100%;
-  //   }
-  // }
   &__text{
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-right: 1em;
     color: white;
-    @media screen and (min-width: $breakpoint-small){
-      width: 50%;
-    }
     p{
       @media screen and (min-width: $breakpoint-med){
         font-size: 1.6em;
       }
     }
-    a{
-      display: inline-block;
-      width: 175px;
-      text-align: center;
-      padding: 0.5em 1em;
-      border: solid 5px;
-      color: white;
-      &:hover{
-        color: $secondary-color;
-      }
+    h2{
+      font-size: 1.75em;
     }
+  }
+  &__buttons{
+    display: flex;
   }
 }
