--- a/src/scss/base/_bio.scss
+++ b/src/scss/base/_bio.scss
@@ -1,13 +1,5 @@
 .jb-bio{
-  padding: 1em;
-  max-width: $max-width;
-  margin: auto;
   &__text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 1em;
-    color: white;
     p{
       @media screen and (min-width: $breakpoint-med){
         font-size: 1.6em;
@@ -16,8 +8,20 @@
     h2{
       font-size: 1.75em;
     }
+    & {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-right: 1em;
+      color: white;
+    }
   }
   &__buttons{
     display: flex;
+  }
+  & {
+    padding: 1em;
+    max-width: $max-width;
+    margin: auto;
   }
 }
